@@ -1,0 +1,54 @@
+#
+# = Helperful
+#
+# A collection of useful Rails helpers.
+#
+#
+# Category::    Rails
+# Package::     Helperful
+# Author::      Simone Carletti <weppos@weppos.net>
+# Copyright::   2008-2009 The Authors
+# License::     MIT License
+#
+#--
+#
+#++
+
+
+module Helperful
+
+  #
+  # = Asset Tag Helper
+  #
+  # Provides a set of helpers for generating HTML that links views to assets such
+  # as images, javascripts, stylesheets, and feeds.
+  #
+  # ==== Requirements
+  #
+  # The following requirements are mandatory for this module.
+  # Including this helper will automatically include them unless already included.
+  #
+  # * ActionView::Helpers::AssetTagHelper
+  #
+  module AssetTagHelper
+
+    def self.included(base)
+      base.class_eval do
+        base.included_modules.include?(ActionView::Helpers::AssetTagHelper) || include(ActionView::Helpers::AssetTagHelper)
+      end
+    end
+
+    # Converts given +files+ in javascript include statements
+    # and appends them in the head section of the page.
+    def javascript(*files)
+      content_for(:head, javascript_include_tag(*files))
+    end
+
+    # Converts given +files+ in stylesheet link statements
+    # and appends them in the head section of the page.
+    def stylesheet(*files)
+      content_for(:head, stylesheet_link_tag(*files))
+    end
+
+  end
+end
